fixed bugs on adding a new comment

--- a/Forum/Views/Discussions/Discussion.cshtml
+++ b/Forum/Views/Discussions/Discussion.cshtml
@@ -152,7 +152,7 @@
 
                     <div class="col-sm-12 ">
 
-                        <textarea name="commentText" id="comment" cols="160" rows="10"></textarea>
+                        <textarea name="commentText" id="commentText" cols="160" rows="10"></textarea>
                     </div>
 
                 </div>
