--- a/Forum/Views/Discussions/Index.cshtml
+++ b/Forum/Views/Discussions/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@model TopicViewModel
 
 @{
-    ViewData["Title"] = $"{Model.TopicName}-MF Forum";
+    ViewData["Title"] = $"{Model.Topic.Name}-MF Forum";
+    ViewBag.TopicId = Model.Topic.Id;
 }
 
 
-<title>@Model.TopicName</title>
+<title>@Model.Topic.Name</title>
 
 
 <div>
@@ -20,7 +21,7 @@
                 <div class="col-sm-4 badge-success">
 
                     <a class="text-light" asp-area="" asp-controller="Discussions" asp-action="Index">
-                        <h3 style="display:block"> @($"{Model.TopicName}")</h3>
+                        <h3 style="display:block"> @($"{Model.Topic.Name}")</h3>
                     </a>
                 </div>
 
@@ -55,7 +56,7 @@
 
 
 
-                <form asp-area="User" asp-controller="Discussions" asp-action="Create" method="get">
+                <form asp-area="User" asp-controller="Discussions" asp-action="Create" method="get" asp-route-id="@ViewBag.TopicId">
                     <div class="form-group">
                         <input class="btn btn-primary" type="submit" value="Create a new discussion" />
                     </div>
@@ -88,7 +89,7 @@
                 </div>
 
             </div>
-            @foreach (Discussion discussion in Model.discussions)
+            @foreach (Discussion discussion in Model.discussions.OrderByDescending(x=>x.Date))
             {
                 <div class="row ">
                     <div class="col-sm-4 bg-primary">
@@ -122,7 +123,7 @@
                             <div class="row ">
 
                                 <p class="text-light">
-                                    <h4 style="display:block"> @($"{  Model.lastMessages.Where(x => x.DiscussionId == discussion.Id).FirstOrDefault().Text}")</h4>
+                                    <h4 style="display:block"> @($"{  Model.lastMessages.Where(x => x.DiscussionId == discussion.Id).FirstOrDefault().Text??""}")</h4>
                                 </p>
 
 
