added entityes by default in DBContext

--- a/Forum/Views/Discussions/Index.cshtml
+++ b/Forum/Views/Discussions/Index.cshtml
@@ -91,7 +91,7 @@
             </div>
             @foreach (var discussionWithLastComment in Model.discussAndLastMess.OrderByDescending(x=>x.Key.Date))
             {
-                <div class="row ">
+                <div class="row border">
                     <div class="col-sm-4 bg-primary">
 
 
