Added validation;Added seed data in DBContext

--- a/Forum/Views/Account/Registration.cshtml
+++ b/Forum/Views/Account/Registration.cshtml
@@ -28,7 +28,7 @@
     </div>
     <div>
         <label asp-for="PhoneNumber"></label><br />
-        <input asp-for="PhoneNumber" />
+        <input type="tel" asp-for="PhoneNumber" />
         <span asp-validation-for="PhoneNumber"></span>
 
     </div><br />
