--- a/Forum/Views/Account/Login.cshtml
+++ b/Forum/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label asp-for="Email"></label><br />
-        <input asp-for="Email" />
+        <input type="email" asp-for="Email" />
         <span asp-validation-for="Email"></span>
     </div>
     <div>
