user can set only png/jpeg/gif as profile photo

--- a/Forum/Areas/User/Views/Account/Profile.cshtml
+++ b/Forum/Areas/User/Views/Account/Profile.cshtml
@@ -13,6 +13,7 @@
     <p>
         <input name="Avatar" type="file" accept="image/*" />
     </p>
+    <span asp-validation-for="Avatar"></span>
 
     <p><strong>Name</strong></p>
     <p><input asp-for="UserName" maxlength="25" size="40" value="@Model.UserName"></p>
